# rusty-reckoning

./: .clippy.toml  .gitignore  Cargo.toml  README.md
.github/workflows/: security.yml  tests.yml
benches/: throughput.rs
data/: 100_clients.csv  10_clients.csv  dispute_with_amount.csv  example_input.csv  invalid.csv
examples/: async_main.rs  generator.rs
src/: csv_utils.rs  dto.rs  engine.rs  error.rs  lib.rs  main.rs  runner.rs
src/runner/: async_runner.rs  mod.rs  sync_runner.rs
src/stores/: accounts.rs  mod.rs  transactions.rs
