[package]
name = "rusty-reckoning"
version = "0.1.0"
edition = "2021"
default-run = "rusty-reckoning"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1

[dependencies]
csv = "1.3.1"
rust_decimal = { version = "1.36.0", features = ["serde"] }
serde = { version = "1.0.217", features = ["derive"] }

[dev-dependencies]
rust_decimal_macros = "1.36.0"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "throughput"
harness = false
